Minor style change.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,7 +2,6 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
 
@@ -17,10 +16,10 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  text-decoration: none;
 
-  &,
-  &:visited {
-    color: $grey-color-dark;
+  &:hover {
+    text-decoration: none;
   }
 }
 
@@ -205,6 +204,11 @@
 .post-link {
   display: block;
   @include relative-font-size(1.5);
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 
