--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,6 +11,7 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
+$text-color-light: lighten($text-color, 30%) !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
 
