--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -103,16 +103,17 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
-  text-decoration: none;
+  color: $text-color;
+  text-decoration: underline;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: darken($text-color, 15%);
   }
 
   &:hover {
-    color: $text-color;
     text-decoration: underline;
+    transition: color ease 0.3s;
+    color: $text-color-light;
   }
 
   .social-media-list &:hover {
@@ -149,9 +150,6 @@ blockquote {
 pre,
 code {
   @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
-  border-radius: 3px;
-  background-color: #eef;
 }
 
 code {
