--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
+            <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
           </li>
         </ul>
       </div>
