--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -10,13 +10,13 @@
 }
 
 .site-title {
-  @include relative-font-size(1.625);
-  font-weight: 300;
+  @include relative-font-size(1.825);
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
   text-decoration: none;
+  font-weight: bold;
 
   &:hover {
     text-decoration: none;
